--- a/index.qmd
+++ b/index.qmd
@@ -2,7 +2,7 @@
 title: "Example Website"
 ---
 
-This is a Quarto website.
+This is an UPPDATED Quarto website.
 
 To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
 
